@@ -160,10 +160,18 @@ RDB_cat_load_ro_op(const char *name, RDB_exec_context *ecp, RDB_transaction *txp
             goto error;
         }
         symname = RDB_tuple_get_string(&tpl, "symbol");
+
+        /* Special handling of selectors and comparison for user-defined types */
         if (strcmp(symname, "RDB_sys_select") == 0) {
             op->opfn.ro_fp = &RDB_op_sys_select;
         } else if (strcmp(symname, "RDB_sys_lt") == 0) {
                 op->opfn.ro_fp = &RDB_op_sys_lt;
+        } else if (strcmp(symname, "RDB_sys_let") == 0) {
+                op->opfn.ro_fp = &RDB_op_sys_let;
+        } else if (strcmp(symname, "RDB_sys_gt") == 0) {
+                op->opfn.ro_fp = &RDB_op_sys_gt;
+        } else if (strcmp(symname, "RDB_sys_get") == 0) {
+                op->opfn.ro_fp = &RDB_op_sys_get;
         } else {
             op->opfn.ro_fp = (RDB_ro_op_func *) lt_dlsym(op->modhdl, symname);
             if (op->opfn.ro_fp == NULL) {
